example css overflow fix

--- a/example/src/index.css
+++ b/example/src/index.css
@@ -13,6 +13,7 @@ body {
   max-width: 700px;
   padding: 0 10px;
   margin: auto;
+  box-sizing: border-box;
 }
 .text-center {
   text-align: center;
